5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4193/executions/1715_3063.log
== TEST (2019-05-02 16:19:57) 
-- CODE:
var1 = int(input("quantidade de pecas de ouro:"))
var2 = int(input("nome da armadura:"))
var3 = int(input("fator de destreza:"))
if (var1 == 200) and 1>= 8:
	print("INTEIRA")
elif(var2 == 50) and 1>= 8:
	print("MALHA")
elif(var3 == 100)and 1>=8:
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:24) 
-- CODE:
var1 = int(input("quantidade de pecas de ouro:"))
var2 = int(input("nome da armadura:"))
var3 = int(input("fator de destreza:"))
if (var1 == 200) and 1>= 8:
	print("INTEIRA")
elif(var2 == 50) and 1>= 8:
	print("MALHA")
elif(var3 == 100)and 1>=8:
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:43) 
-- CODE:
var1 = int(input("quantidade de pecas de ouro:"))
var2 = int(input("nome da armadura:"))
var3 = int(input("fator de destreza:"))
if (var1 == 200) and 1>= 8:
	print("INTEIRA")
elif(var2 == 50) and 1>= 8:
	print("MALHA")
elif(var3 == 100)and 1>=8:
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:24:38) 
-- CODE:
var1 = int(input("quantidade de pecas de ouro:"))
var2 = int(input("nome da armadura:"))
var3 = int(input("fator de destreza:"))
if (var1 == 200) or 1>= 8:
	print("INTEIRA")
elif(var2 == 50) or 1>= 8:
	print("MALHA")
elif(var3 == 100) or 1>=8:
	print("PLACA")
else:
	print("ENTRADA INVALIDA")
print(...)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:01) 
-- CODE:
var1 = int(input("quantidade de pecas de ouro:"))
var2 = int(input("nome da armadura:"))
var3 = int(input("fator de destreza:"))
if (var1 == 200) or 1>= 8:
	print("INTEIRA")
elif(var2 == 50) or 1>= 8:
	print("MALHA")
elif(var3 == 100) or 1>=8:
	print("PLACA")
else:
	print("ENTRADA INVALIDA")
print(...)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:25) 
-- CODE:
var1 = int(input("quantidade de pecas de ouro:"))
var2 = int(input("nome da armadura:"))
var3 = int(input("fator de destreza:"))
if (var1 == 200) or 1>= 8:
	print("INTEIRA")
elif(var2 == 50) or 1>= 8:
	print("MALHA")
elif(var3 == 100) or 1>=8:
	print("PLACA")
else:
	print("ENTRADA INVALIDA")
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:45) 
-- CODE:
var1 = int(input("quantidade de pecas de ouro:"))
var2 = int(input("nome da armadura:"))
var3 = int(input("fator de destreza:"))
if (var1 == 200) or (30*d - 20):
	print("INTEIRA")
elif(var2 == 50) or (15*d - 1):
	print("MALHA")
elif(var3 == 100) or (20*d - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:11) 
-- CODE:
var1 = int(input("quantidade de pecas de ouro:"))
var2 = int(input("nome da armadura:"))
var3 = int(input("fator de destreza:"))
if (var1 == 200) or (30*d - 20):
	print("INTEIRA")
elif(var2 == 50) or (15*d - 1):
	print("MALHA")
elif(var3 == 100) or (20*d - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:45) 
-- CODE:
var1 = int(input("quantidade de pecas de ouro:"))
var2 = int(input("nome da armadura:"))
var3 = int(input("fator de destreza:"))
if (var1 == 200) or (30*d - 20):
	print("INTEIRA")
elif(var2 == 50) or (15*d - 1):
	print("MALHA")
elif(var3 == 100) or (20*d - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:50) 
-- CODE:
var = int(input("quantidade de pecas de ouro:"))
var = int(input("nome da armadura:"))
var = int(input("fator de destreza:"))
if (var == 200) or (30*d - 20):
	print("INTEIRA")
elif(var == 50) or (15*d - 1):
	print("MALHA")
elif(var == 100) or (20*d - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:36:50) 
-- CODE:
var = int(input("quantidade de pecas de ouro:"))
var = int(input("nome da armadura:"))
var = int(input("fator de destreza:"))
if (var == 200) or (30*d - 20):
	print("INTEIRA")
elif(var == 50) or (15*d - 1):
	print("MALHA")
elif(var == 100) or (20*d - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- EXECUTION TIME:
0.130216
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3063/main.py", line 2, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:52) 
-- CODE:
var = int(input("quantidade de pecas de ouro:"))
var = int(input("nome da armadura:"))
var = int(input("fator de destreza:"))
if (var == 200) or (30*d - 20):
	print("INTEIRA")
elif(var == 50) or (15*d - 1):
	print("MALHA")
elif(var == 100) or (20*d - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:06) 
-- CODE:
var = int(input("quantidade de pecas de ouro:"))
var = int(input("nome da armadura:"))
var = int(input("fator de destreza:"))
if (var == 200) or (30*d - 20):
	print("INTEIRA")
elif(var == 50) or (15*d - 1):
	print("MALHA")
elif(var == 100) or (20*d - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:36) 
-- CODE:
var = int(input("quantidade de pecas de ouro:"))
var = int(input("fator de destreza:"))
if (var == 200) or (30*d - 20):
	print("INTEIRA")
elif(var == 50) or (15*d - 1):
	print("MALHA")
elif(var == 100) or (20*d - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:54) 
-- CODE:
var = int(input("quantidade de pecas de ouro:"))
var = int(input("fator de destreza:"))
if (var == 200) or (30*d - 20):
	print("INTEIRA")
elif(var == 50) or (15*d - 1):
	print("MALHA")
elif(var == 100) or (20*d - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:03) 
-- CODE:
var = int(input("quantidade de pecas de ouro:"))
var = int(input("nome da armadura"))
var = int(input("fator de destreza:"))
if (var == 200) or (30*1 - 20):
	print("INTEIRA")
elif(var == 50) or (15*8 - 1):
	print("MALHA")
elif(var == 100) or (20*5 - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:10) 
-- CODE:
var = int(input("quantidade de pecas de ouro:"))
var = int(input("nome da armadura"))
var = int(input("fator de destreza:"))
if (var == 200) or (30*1 - 20):
	print("INTEIRA")
elif(var == 50) or (15*8 - 1):
	print("MALHA")
elif(var == 100) or (20*5 - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:21) 
-- CODE:
var = int(input("quantidade de pecas de ouro:"))
var = int(input("nome da armadura"))
var = int(input("fator de destreza:"))
if (var == 200) or (30*1 - 20):
	print("INTEIRA")
elif(var == 50) or (15*8 - 1):
	print("MALHA")
elif(var == 100) or (20*5 - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:47) 
-- CODE:
var = int(input("quantidade de pecas de ouro:"))
var = int(input("nome da armadura"))
var = int(input("fator de destreza:"))
if (var == 200) or (30*1 - 20):
	print("INTEIRA")
elif(var == 50) or (15*8 - 1):
	print("MALHA")
elif(var == 100) or (20*5 - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:25) 
-- CODE:
var1="INTEIRA"
var2="MALHA"
var3="PLACA"
if (var1 == 200) or (30*1 - 20):
	print("INTEIRA")
elif(var2 == 50) or (15*8 - 1):
	print("MALHA")
elif(var3 == 100) or (20*5 - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(var)
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:32) 
-- CODE:
var1="INTEIRA"
var2="MALHA"
var3="PLACA"
if (var1 == 200) or (30*1 - 20):
	print("INTEIRA")
elif(var2 == 50) or (15*8 - 1):
	print("MALHA")
elif(var3 == 100) or (20*5 - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

-- OUTPUT:
INTEIRA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:39) 
-- CODE:
var1="INTEIRA"
var2="MALHA"
var3="PLACA"
if (var1 == 200) or (30*1 - 20):
	print("INTEIRA")
elif(var2 == 50) or (15*8 - 1):
	print("MALHA")
elif(var3 == 100) or (20*5 - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

	
	
-- OUTPUT:
INTEIRA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:04) 
-- CODE:
var1=INTEIRA
var2=MALHA
var3=PLACA
if (var1 == 200) or (30*1 - 20):
	print("INTEIRA")
elif(var2 == 50) or (15*8 - 1):
	print("MALHA")
elif(var3 == 100) or (20*5 - 1):
	print("PLACA")
else:
	print("ENTRADA INVALIDA")

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=INTEIRA
NameError: name 'INTEIRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:52) 
-- CODE:
var1 = int(input("quantidade de pecas de ouro:"))
var2 = int(input("nome da armadura"))
var3 = int(input("fator de destreza"))
print(var1,var2,var3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:14) 
-- CODE:
var1 = int(input("quantidade de pecas de ouro:"))
var2 = float(input("nome da armadura"))
var3 = int(input("fator de destreza"))
print(var1,var2,var3)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = float(input())
ValueError: could not convert string to float: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:27) 
-- CODE:
var1 = int(input("quantidade de pecas de ouro:"))
var2 = (input("nome da armadura")
var3 = int(input("fator de destreza"))
print(var1,var2,var3)

	
	
-- ERROR:
File "XXXX", line 3
    var3 = int(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:35) 
-- CODE:
var1 = int(input("quantidade de pecas de ouro:"))
var2 = input("nome da armadura")
var3 = int(input("fator de destreza"))
print(var1,var2,var3)

	
	
-- OUTPUT:
-2 INTEIRA 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:56) 
-- CODE:
var1 = int(input("quantidade de pecas de ouro:"))
var2 = input("nome da armadura")
var3 = int(input("fator de destreza"))
print(var1,var2,var3)

	
	
-- OUTPUT:
-2 INTEIRA 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
